[gd_scene load_steps=5 format=3 uid="uid://bkenrqng1f6dl"]

[ext_resource type="Script" path="res://menus/run_stats.gd" id="1_4yk3v"]
[ext_resource type="PackedScene" uid="uid://c7xkwietyob3k" path="res://objects/ground_tile_map.tscn" id="2_juaxs"]
[ext_resource type="LabelSettings" uid="uid://bpqvf08y5foi0" path="res://menus/ScreenTitle.tres" id="3_i2lp8"]
[ext_resource type="LabelSettings" uid="uid://7eq0evhplebd" path="res://menus/stats_labels.tres" id="4_5yybn"]

[node name="RunStats" type="Node2D"]
script = ExtResource("1_4yk3v")

[node name="GroundTileMap" parent="." instance=ExtResource("2_juaxs")]
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 720898, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 720899, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, 720900, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 655365, 0, 0, 720901, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, 720902, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 720903, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 720904, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 0, 0, 655369, 0, 0, 720905, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 720906, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 720907, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, 720908, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 0, 0, 655373, 0, 0, 720909, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 720910, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 720911, 0, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 192.0
offset_top = 16.0
offset_right = 832.0
offset_bottom = 768.0
theme_override_constants/separation = 6

[node name="CongratsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Congratulations!"
label_settings = ExtResource("3_i2lp8")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LevelVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LevelTitleLabel" type="Label" parent="VBoxContainer/HBoxContainer/LevelVBoxContainer"]
layout_mode = 2
text = "Level"
label_settings = ExtResource("4_5yybn")
horizontal_alignment = 1

[node name="LevelsLabel" type="Label" parent="VBoxContainer/HBoxContainer/LevelVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = ExtResource("4_5yybn")
horizontal_alignment = 1

[node name="TimeVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimeTitleLabel" type="Label" parent="VBoxContainer/HBoxContainer/TimeVBoxContainer"]
layout_mode = 2
text = "Time"
label_settings = ExtResource("4_5yybn")
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="VBoxContainer/HBoxContainer/TimeVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = ExtResource("4_5yybn")
horizontal_alignment = 1

[node name="BestTimeVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeathsTitleLabel" type="Label" parent="VBoxContainer/HBoxContainer/BestTimeVBoxContainer"]
layout_mode = 2
text = "Best Time"
label_settings = ExtResource("4_5yybn")
horizontal_alignment = 1

[node name="BestTimeLabel" type="Label" parent="VBoxContainer/HBoxContainer/BestTimeVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = ExtResource("4_5yybn")
horizontal_alignment = 1

[node name="DeathsLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Deaths:"
label_settings = ExtResource("4_5yybn")
horizontal_alignment = 1
